add ValidationService for controllers methods SignupController ready ImageService in progress (refactoring need)